[gd_scene load_steps=3 format=3 uid="uid://ij1bm1t0lgj5"]

[ext_resource type="Script" path="res://check_button.gd" id="1_1im7u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8d1v"]
size = Vector2(44, 24)

[node name="CheckButton" type="CheckButton"]
offset_right = 44.0
offset_bottom = 24.0
scale = Vector2(2, 2)
button_pressed = true
script = ExtResource("1_1im7u")

[node name="button_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="button_area"]
position = Vector2(22, 12)
shape = SubResource("RectangleShape2D_i8d1v")

[connection signal="toggled" from="." to="." method="_on_toggled"]
[connection signal="area_entered" from="button_area" to="." method="_on_area_2d_area_entered"]
